# llmv_translation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: main.py  prompt.py  translate.py  ui.py
