[tool.poetry]
name = "llmv_translation"
version = "0.1.0"
description = ""
authors = ["Oz Mendelsohn <oz.mendelsohn@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
panel = "^1.3.2"
hvplot = "^0.9.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
